style.css
*{
    margin:0;
    padding:0;
    font-family: 'poppins',sans-serif;
    box-sizing:border-box;
}
html{
    scroll-behavior: smooth;
}

body{
    background-color: #080808;
    color:#ffff;
    cursor: url('images/cursor2.png') 4 4 ,auto;
}

 #header{
    width: 100%;
    height:100vh;
} 
.container{
    padding:10px 10%;
  }

.container p{
    font-size:20px;
    font-weight: bolder;
  }
#image-container {
    position: relative;
    width: 100%;
    height: 100%;
    overflow: hidden;
    z-index: -1;
  }
  
  /* Initial state of images */
 #image-container img {
    position: absolute;
    opacity: 0;
    width: 150px;
    height: 150px;
    object-fit: cover;
    border-radius: 10px;
    transform: scale(0.3); /* Start small */
    transition: opacity 0.4s ease, transform 0.4s ease; /* Smooth fade and zoom */
  }
  
  /* Make the image visible and grow */
  #image-container img.visible {
    opacity: 1;
    transform: scale(1); /* Smoothly grow to full size */
  }
.nav-div{
    padding:10px 10%;
    z-index:1;
    position:sticky;
    width:100%;
    top:0;
    background: linear-gradient(to bottom, black 40%, transparent 100%);
}
nav{
    display:flex;
    align-items: center;
    justify-content:space-between;
    flex-wrap:wrap;   
     
  }
  nav ul li{
    display: inline-block;
    list-style: none;
    margin:8px 16px;
    justify-content: center;
  }

  nav ul li a{
    color:#fff;
    text-decoration: none;
    font-size: 18px;
    position:relative;
    cursor: url('images/point2.png') 4 4 ,auto;
  }

  nav ul li a::after {
    content: '';
    width: 0;
    height: 3px;
    background: #bf0038;
    position: absolute;
    left: 0;
    bottom: -6px;
    transition: width 0.5s ease;
}

nav ul li a:hover::after {
    width: 100%;
}

.content {
    margin-top: 60px;
    padding: 20px;
  }

.header-text{
    font-size:30px; 
    z-index:10; 
    position:absolute;
    top:50%;
    left:50%;
    transform: translate(-50%,-50%); 
    /* opacity:0;
    transform: translateY(50px); 
    animation: slideUp 1.5s ease-out forwards;} */
}

.header-text h1{
    font-size: 4rem;
    margin-top:16px;
}

.header-text h1 span{
   color:#bf0038; 
   cursor: url('images/cursor.png') 4 4 ,auto;
}

.slide-up {
    animation: slide-up 1.5s cubic-bezier(0.65, 0, 0.35, 1) both;
}

.heading > div:nth-child(2) > p.slide-up {
    animation-delay: 0.1s;
}

.heading > div:nth-child(3) > p.slide-up {
    animation-delay: 0.2s; 
}

@keyframes slide-up {
    0% {
        transform: translateY(20px);
        opacity: 0;
    }
    100% {
        transform: translateY(0);
        opacity: 1;
    }
}

/* -----------about--------- */
#about{
    padding:80px 0;
    color:#ababab
}

.about-col-2 h1{
    color:#e7e3e3
}
.row{
    display:flex;
    justify-content:space-between;
    flex-wrap:wrap;
}

.about-col-1{
   flex-basis :35%;
}

.about-col-1 img{
    width:100%;
    border-radius:15px;
}

.about-col-2{
   flex-basis:60%; 
}

.sub-title{
    font-size: 60px;
    font-weight:600;
}

.about-col-2 p{
    margin-top:10px;
    text-align: justify;
    font-weight: 500;
    font-size: 17px;
    color:#e7e3e3d2
}

.tab-titles{
   display:flex;
   margin:46px 0 20px; 
}

.tab-links{
    margin-right:50px;
    font-size:18px;
    font-weight:500;
    cursor: url('images/point2.png') 4 4 ,auto;
    position:relative;    
}

.tab-links::after{
    content:'';
    width:0;
    height:3px;
    background:#bf0038;
    position:absolute;
    left:0;
    bottom:-8px;
    transition:width 0.5s ease;
}

.tab-links.active-link::after{
    width:50%;
}

.tab-contents ul li{
    list-style:none;
    margin:10px 0;    
}

.tab-contents ul li span{
    color:#bf0038;
    font-size:16px;
    cursor: url('images/cursor.png') 4 4 ,auto;
}

.tab-contents{
    display:none;
}

.tab-contents.active-tab{
    display:block;
}

/* -----------projects--------- */
#projects{
    padding:30px 0;
}

.projects-list{
    display:grid;
    grid-template-columns:repeat(auto-fit,minmax(250px ,1fr));
    grid-gap:40px;
    margin-top:50px;
}

.projects-list div{
    background:#262626;
    padding:40px;
    font-size:13px;
    font-weight:300;
    border-radius:10px;
    transition: background-color 0.5s, transform 0.5s;

}
.projects-list div i{
    font-size: 50px;
    margin-bottom: 30px;
}

.projects-list div h2{
    font-size: 24px;
    font-weight:500;
    margin-bottom:15px;
    text-align: center;
}

.projects-list div p{
    font-size: 16px;
    margin-bottom:12px;
    text-align: justify;
}

.projects-list div a{
    text-decoration: underline;
    color:#fff;
    font-size:14px;
    margin-top:16px;
    display:inline-block;
}

.projects-list div:hover{
    background: #bf0038;
    transform:translateY(-10px);
    cursor: url('images/cursor.png') 4 4 ,auto;
}

/*-------------Interships And Certifications----------- */
#internship{
    padding:30px 0;
}

.work-list{
    display:grid;
    grid-template-columns:repeat(auto-fit,minmax(350px ,1fr));
    grid-gap:40px;
    margin-top:50px;   
}

.work{   
    overflow:hidden;
    border-radius:10px;
}

.layer{
    width:100%;
    height:100%;
    background:linear-gradient(rgba(0,0,0,0.4),#bf0038);
    border-radius:10px;
    left:0;
    bottom:0;
    overflow:hidden;
    display:flex;
    align-items:center;
    justify-content: center;
    flex-direction: column;
    padding:10px 40px;
    text-align:center;
    font-size:14px;
    cursor: url('images/cursor.png') 4 4 ,auto; 
}

.layer h3{
    font-weight: 500;
    margin: 8px 0;
    font-size: 24px;
}

.layer h4{
    font-style: italic;
    font-size: 16px;
    margin-bottom: 8px;
}

.layer p{
    font-size: 16px;
    text-align: justify;
    font-weight: 400;
}

.layer a{
    margin-top: 20px;
    color:#bf0038;
    text-decoration: none;
    font-size: 18px;
    line-height: 40px;
    background: #fff;
    width:40px;
    height:40px;
    border-radius: 50%;
    text-align: center;
    cursor: url('images/point.png') 4 4 ,auto;
}
/*-------------Skills----------- */
#skills{
    padding:30px 0;
}

.skills__list {
    display:grid;
    grid-template-columns:repeat(auto-fit,minmax(130px ,1fr));
    grid-gap:40px;
    margin-top:50px; 
  }
  
  .skills__list-item {
    display: inline-block;
    padding: 10px 12px;
    background-color: #262626; 
    color: white; 
    font-size: 14px;
    font-weight: 500;
    border-radius: 10px;
    box-shadow: 0 2px 4px #bf0038;
    text-align: center;
    justify-content: center;
    transition: transform 0.2s, background-color 0.2s, color 0.2s;
  }
  
  /* .skills__list-item:hover {
    background-color: #bf0038; 
    transform: scale(1.05); 
    box-shadow: 0 4px 4px #262626;
    font-weight:540;
  }
   */
  .btn--plain {
    text-decoration: none;
  }
  
  @media (max-width: 768px) {
    .skills__list-item {
      font-size: 12px;
      padding: 8px 12px;
    }
  }

/*-------------Contact----------- */
  .contact-left{
    flex-basis: 55%;
  }

  .contact-right{
    flex-basis:40%;
  }

  .social-icons{
    margin-top:30px;
    display: flex; 
    flex-direction: column; 
    align-items: flex-start
  }
  
  .social-icons a{
    text-decoration: none;
    font-size:24px;
    margin-bottom: 12px;
    color:#bf0038;
    display:inline-block;
    transition:transform 0.5s;
  }

  .social-icons a:hover{
    color:#ff004f;
    transform:translateY(-5px);
    cursor: url('images/point3.png') 4 4 ,auto;
  }

  .resume {
    cursor: url('images/point3.png') 4 4 ,auto;
    position: relative;
    top: 60%;
    right:-70%;
    display: inline-block;
    border-radius: 10px;
    padding: 15px 20px;
    background-color: transparent;
    text-align: center;
    justify-content: center;
    box-shadow: 0 -3px 4px #bf0038, 0 3px 4px #bf0038;

  }
  
  .resume a {
    text-decoration: none;
    font-size: 18px;
    color: #bf0038;
    font-weight: 600; 
    cursor: url('images/point3.png') 4 4 ,auto;
  }
  
  .resume:hover {
    font-weight: 700; 
  }
  
  .copyright{
    width:100%;
    text-align:center;
    padding: 10px 0;
    opacity: 0.3;
    font-weight: 500;
    margin-top:18px;
  }
/*-------------scrollable container----------- */
 ::-webkit-scrollbar {
    width: 12px;
    background-color: #000000;
}

::-webkit-scrollbar-thumb {
    background-color: #444;
    border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
    background-color: #666;
}

@supports (scrollbar-color: auto) {
    html {
        scrollbar-width:auto;
        scrollbar-color: #262626 #080808;
    }
}


/*-------------css for small screens----------- */ 
  nav .fa-solid{
    display:none;
  }
  @media only screen and (max-width:600px){
    .header-text{
        font-size:16px;
    }
    .header-text h1{
        font-size: 30px;
    }
    nav .fa-solid{
        display:block;
        font-size: 25px;
    }
    nav ul{
        background:#bf0038;
        position:fixed;
        top:0;
        right:-150px;
        width:150px;
        height:54vh;
        padding-top:50px;
        z-index: 2;
        transition:right 0.5s;
    } 
    nav ul li{
        display:block;
        margin:25px;
    }
    nav ul .fa-solid{
       position:absolute;
       top:25px;
       left:25px;
       cursor:pointer;
    }     
    .sub-title{
        font-size:40px;
    }
    .about-col-1,.about-col-2{
        flex-basis:100%;
    }
    .about-col-1{
        margin-bottom: 30px;
    }
    .about-col-2{
        font-size: 12px;
    }
    .work-list{
        grid-template-columns:repeat(auto-fit,minmax(300px ,1fr));
    }
    .contact-left,.contact-right{
        flex-basis: 100%;
    }
    .resume{
        left:0%;
        top:1%;
    }
    .copyright{
       font-size:14px; 
    }
    .social-icons a{
        font-size: 22px;
    }

  }
  

